Exit menu update

--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -60,8 +60,8 @@ CurrentAppliedTheme=134380265FBB4A9CA00A1DC9770217B8
 bEnableMiddleEllipsis=True
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowWidth=1194
-NewWindowHeight=680
+NewWindowWidth=1594
+NewWindowHeight=860
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -108,7 +108,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=360,Y=216)
+NewWindowPosition=(X=160,Y=126)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -135,13 +135,13 @@ bHMDForPrimaryProcessOnly=True
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1194,Y=680)
+LastSize=(X=1594,Y=860)
 LastExecutedLaunchDevice=Windows@OSAO-EM00XEBF
 LastExecutedLaunchName=OSAO-EM00XEBF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=360,Y=216)
+MultipleInstancePositions=(X=160,Y=126)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 CurrentPosGridSize=0
@@ -393,8 +393,8 @@ MRUItem1=/Game/MainmenuMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -420,6 +420,7 @@ RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/UI/ExitOptions.ExitOptions
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=213.000
@@ -3016,13 +3017,25 @@ BackgroundBlur.Appearance=True
 BackgroundBlur.Content=True
 BackgroundBlur.Layout=True
 Texture2D.Interchange =True
+ExitOptions_C.Appearance=True
+ExitOptions_C.Input=True
+ExitOptions_C.Interaction=True
+ExitOptions_C.Performance=True
+ExitOptions_C.Layout=True
+ExitOptions_C.Behavior=True
+ExitOptions_C.Render Transform=True
+ExitOptions_C.Localization=True
+ExitOptions_C.Rendering=True
+ExitOptions_C.Navigation=True
+ExitOptions_C.Designer=True
+ExitOptions_C.Accessibility=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/MainMenu
-MRUItem1=/Game/Maps/MainmenuMap
-MRUItem2=/Game/UI/Button_menu
-MRUItem3=/Game/UI/LevelSelectMenuWidget
-MRUItem4=/Game/UI/ExitOptions
+MRUItem0=/Game/UI/ExitOptions
+MRUItem1=/Game/UI/MainMenu
+MRUItem2=/Game/Maps/MainmenuMap
+MRUItem3=/Game/UI/Button_menu
+MRUItem4=/Game/UI/LevelSelectMenuWidget
 MRUItem5=/Game/UI/UI_assets/Button_arrow
 MRUItem6=/Game/UI/UI_assets/RotF_logo_1_
 MRUItem7=/Engine/EngineFonts/Roboto
@@ -3156,12 +3169,12 @@ bNavigationToolVisible=False
 
 [DetailPropertyExpansion]
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 Object="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Object="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 MassSettings="\"Object\" \"Object.Mass\" "
@@ -3176,7 +3189,7 @@ MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
-MainMenu_C="\"Object\" "
+MainMenu_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
@@ -3355,6 +3368,7 @@ MovieSceneDecorationContainerObject="\"Object\" "
 MovieSceneSignedObject="\"Object\" "
 MovieScene2DTransformSection="\"Object\" "
 MovieSceneSection="\"Object\" "
+ExitOptions_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/UI/MainMenu.MainMenu=1
