--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -406,18 +406,18 @@ PlayerStart=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 [EditorStartup]
 LastLevel=/Game/Maps/Player
 LastLevel========
-LastLevel=/Game/Maps/NewMap
+LastLevel=/Engine/Maps/Templates/OpenWorld
 MRUItem0=/Game/Maps/MainmenuMap
 MRUItem1=/Game/MainmenuMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -435,9 +435,10 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/Blueprints/BF_FPS_Character.BF_FPS_Character
+OpenAssetsAtExit=/Game/UI/PlayerUi/WP_HealtBar.WP_HealtBar
 
 [RootWindow]
-ScreenPosition=X=2346.000 Y=-277.000
+ScreenPosition=X=426.000 Y=112.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1839,7 +1840,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Animation/Control
 RecentsFiles=F:/Unreal5/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/UI/PlayerUi
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -3062,16 +3063,27 @@ UserDefinedEnum.Enumerators=True
 MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
 MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Rendering=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+WP_HealtBar_C.Events=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/BF_FPS_Character
-MRUItem1=/Game/Maps/NewMap
-MRUItem2=/Game/Maps/Player
-MRUItem3=/Game/Blueprints/E_MovementState
-MRUItem4=/Game/UI/OptionsMenuWB
-MRUItem5=/Game/UI/MainMenu
-MRUItem6=/Game/UI/PlayerUi/WP_DashStaminaBar
-MRUItem7=/Game/UI/PlayerUi/WP_HealtBar
+MRUItem0=/Game/UI/PlayerUi/WP_HealtBar
+MRUItem1=/Game/Blueprints/BF_FPS_Character
+MRUItem2=/Game/Maps/NewMap
+MRUItem3=/Game/Maps/Player
+MRUItem4=/Game/Blueprints/E_MovementState
+MRUItem5=/Game/UI/OptionsMenuWB
+MRUItem6=/Game/UI/MainMenu
+MRUItem7=/Game/UI/PlayerUi/WP_DashStaminaBar
 MRUItem8=/Game/Blueprints/Bullet
 MRUItem9=/Game/Blueprints/Ground_Assault_Trooper_A
 MRUItem10=/Game/Maps/Enemy1
@@ -3197,12 +3209,12 @@ bNavigationToolVisible=False
 
 [DetailPropertyExpansion]
 Button="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-ContentWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-PanelWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+ContentWidget="\"Object\" "
+PanelWidget="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 Object="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
 MassSettings="\"Object.Mass\" "
@@ -3218,7 +3230,7 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 MainMenu_C="\"Object\" "
-UserWidget="\"Object\" "
+UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 CanvasPanel="\"Object\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 HorizontalBox="\"Object\" "
@@ -3255,7 +3267,7 @@ Pawn=
 ProjectileMovementComponent="\"Object\" "
 ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" "
 Border="\"Object\" "
-WP_HealtBar_C="\"Object\" "
+WP_HealtBar_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 K2Node_InputAction="\"Object\" "
 K2Node_InputAxisEvent="\"Object\" "
 K2Node_Event="\"Object\" "
@@ -3270,6 +3282,7 @@ GLTFMaterialExportOptions="\"Object\" "
 AssetUserData="\"Object\" "
 ControlRigTestData="\"Object\" "
 ControlRigReplay="\"Object\" "
+Image="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/UI/MainMenu.MainMenu=1
@@ -3314,8 +3327,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
