--- a/project/Saved/Config/WindowsEditor/GameUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/GameUserSettings.ini
@@ -1,9 +1,9 @@
 ;METADATA=(Diff=true, UseCommands=true)
 [/Script/Engine.GameUserSettings]
-bUseVSync=True
+bUseVSync=False
 bUseDynamicResolution=False
-ResolutionSizeX=1600
-ResolutionSizeY=900
+ResolutionSizeX=1920
+ResolutionSizeY=1080
 LastUserConfirmedResolutionSizeX=1920
 LastUserConfirmedResolutionSizeY=1200
 FullscreenMode=2
