--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -60,9 +60,9 @@ CurrentAppliedTheme=134380265FBB4A9CA00A1DC9770217B8
 bEnableMiddleEllipsis=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
 AutoSaveMaxBackups=10
 AutoSaveMethod=BackupAndRestore
-AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
 bForceCompilationAtStartup=False
 RestoreOpenAssetTabsOnRestart=AlwaysPrompt
 bMonitorContentDirectories=True
@@ -406,6 +406,7 @@ OptionsMenuWB_C=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.Defaul
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
 Settingsave_C=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
+EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.Font,PropertyWrapper.DefaultValueCategory.HoverTransform,PropertyWrapper.DefaultValueCategory.Tranform,K2Node_VariableGet.DefaultValueCategory.Font,K2Node_VariableGet.DefaultValueCategory.Tranform
 
 [EditorStartup]
 LastLevel=/Game/Maps/Player
@@ -415,13 +416,15 @@ MRUItem0=/Game/Maps/MainmenuMap
 MRUItem1=/Game/MainmenuMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=SoundClassEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=SoundClassEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
@@ -445,8 +448,13 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/UI/Button_menu.Button_menu
+OpenAssetsAtExit=/Game/UI/OptionsMenuWB.OptionsMenuWB
+OpenAssetsAtExit=/Game/Audio/MasterSoundclassMIx.MasterSoundclassMIx
+OpenAssetsAtExit=/Game/Audio/SFX/click-345983.click-345983
+OpenAssetsAtExit=/Game/Maps/MainmenuMap.MainmenuMap:PersistentLevel.MainmenuMap
+OpenAssetsAtExit=/Game/Audio/Master.Master
+OpenAssetsAtExit=/Game/Saves/Settingsave.Settingsave
 
 [RootWindow]
 ScreenPosition=X=272.000 Y=240.000
@@ -3104,38 +3112,40 @@ SoundClass.Legacy=True
 SoundClass.Submix=True
 SoundClass.Loading=True
 Settingsave_C.Default=True
+SoundWave.Curves=True
+SoundWave.Advanced=True
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Saves/Settingsave
-MRUItem1=/Game/Audio/MasterSoundclassMIx
-MRUItem2=/Game/Audio/Music/relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME
+MRUItem1=/Game/Audio/Master
+MRUItem2=/Game/Audio/MasterSoundclassMIx
 MRUItem3=/Game/Audio/SFX/click-345983
 MRUItem4=/Game/UI/Button_menu
-MRUItem5=/Game/UI/ExitOptions
-MRUItem6=/Game/Maps/MainmenuMap
+MRUItem5=/Game/Audio/Music/MasterMusic_Soundclass
+MRUItem6=/Game/Audio/Music/relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME
 MRUItem7=/Game/UI/OptionsMenuWB
-MRUItem8=/Game/Maps/Enemy1
-MRUItem9=/Game/UI/MainMenu
-MRUItem10=/Game/UI/LevelSelectMenuWidget
-MRUItem11=/Game/UI/UI_assets/Button_arrow
-MRUItem12=/Game/UI/UI_assets/RotF_logo_1_
-MRUItem13=/Engine/EngineFonts/Roboto
-MRUItem14=/Game/StarterContent/Maps/Minimal_Default
-MRUItem15=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem16=/Game/StarterContent/Maps/StarterMap
-MRUItem17=/Game/UI/WBP_Layer
-MRUItem18=/Game/Maps/Test
-MRUItem19=/Game/Blueprints/BF_FPS_Character
-MRUItem20=/Game/Maps/Player
-MRUItem21=/Game/Maps/NewMap_backup_HLOD0_Instancing
-MRUItem22=/Game/Maps/NewMap_backup
-MRUItem23=/Game/Maps/NewMap
-MRUItem24=/Game/Blueprints/Doors/BP_P2_DoorHalf
-MRUItem25=/Game/Blueprints/Doors/BP_P2_Door
-MRUItem26=/Game/Blueprints/Doors/BP_P_Door
-MRUItem27=/Game/Blueprints/Doors/BP_P_DoorHalf
-MRUItem28=/Game/StarterContent/Props/SM_Door
-MRUItem29=/Game/Blueprints/GM_Gamemode
+MRUItem8=/Game/Maps/MainmenuMap
+MRUItem9=/Game/UI/ExitOptions
+MRUItem10=/Game/Maps/Enemy1
+MRUItem11=/Game/UI/MainMenu
+MRUItem12=/Game/UI/LevelSelectMenuWidget
+MRUItem13=/Game/UI/UI_assets/Button_arrow
+MRUItem14=/Game/UI/UI_assets/RotF_logo_1_
+MRUItem15=/Engine/EngineFonts/Roboto
+MRUItem16=/Game/StarterContent/Maps/Minimal_Default
+MRUItem17=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem18=/Game/StarterContent/Maps/StarterMap
+MRUItem19=/Game/UI/WBP_Layer
+MRUItem20=/Game/Maps/Test
+MRUItem21=/Game/Blueprints/BF_FPS_Character
+MRUItem22=/Game/Maps/Player
+MRUItem23=/Game/Maps/NewMap_backup_HLOD0_Instancing
+MRUItem24=/Game/Maps/NewMap_backup
+MRUItem25=/Game/Maps/NewMap
+MRUItem26=/Game/Blueprints/Doors/BP_P2_DoorHalf
+MRUItem27=/Game/Blueprints/Doors/BP_P2_Door
+MRUItem28=/Game/Blueprints/Doors/BP_P_Door
+MRUItem29=/Game/Blueprints/Doors/BP_P_DoorHalf
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -3249,11 +3259,11 @@ bNavigationToolVisible=False
 [DetailPropertyExpansion]
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 Object="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Object="\"Object\" \"Object.SoundClasses.SoundClassEffects\" \"Object.SoundClasses.SoundClassEffects.SoundClassEffects[0]\" \"Object.SoundClasses.SoundClassEffects.SoundClassEffects[1]\" "
+Object="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 MassSettings="\"Object\" \"Object.Mass\" "
@@ -3437,7 +3447,7 @@ Texture2D="\"Object\" "
 Texture="\"Object\" "
 Font="\"Object\" \"Object.Font\" "
 ScaleBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
-Button_menu_C="\"Object\" \"Object.Default.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Button_menu_C="\"Object\" "
 BackgroundBlur="\"Object\" \"Object.Render Transform.RenderTransform\" "
 MovieScene2DTransformTrack="\"Object\" "
 MovieScenePropertyTrack="\"Object\" "
@@ -3451,9 +3461,9 @@ ExitOptions_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 ComboBoxString="\"Object\" \"Object.Style.WidgetStyle.ComboButtonStyle\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle.Normal\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle.Normal.TintColor\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle.Normal.ImageSize\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle.Normal.OutlineSettings\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle.Normal.OutlineSettings.Color\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle.Hovered.TintColor\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle.Hovered.OutlineSettings\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle.Hovered.OutlineSettings.Color\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle.Pressed.TintColor\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle.Pressed.OutlineSettings\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle.Pressed.OutlineSettings.Color\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle.Disabled.TintColor\" \"Object.Style.WidgetStyle.ComboButtonStyle.ButtonStyle.Disabled.OutlineSettings.Color\" \"Object.Style.WidgetStyle.ComboButtonStyle.DownArrowImage.TintColor\" \"Object.Style.WidgetStyle.ComboButtonStyle.DownArrowImage.ImageSize\" \"Object.Style.WidgetStyle.ComboButtonStyle.DownArrowImage.OutlineSettings.Color\" \"Object.Style.WidgetStyle.ComboButtonStyle.DownArrowPadding\" \"Object.Style.WidgetStyle.ComboButtonStyle.MenuBorderBrush.TintColor\" \"Object.Style.WidgetStyle.ComboButtonStyle.MenuBorderBrush.Margin\" \"Object.Style.WidgetStyle.ComboButtonStyle.MenuBorderBrush.OutlineSettings.Color\" \"Object.Style.WidgetStyle.ComboButtonStyle.ContentPadding\" \"Object.Style.ItemStyle\" \"Object.Style.ItemStyle.SelectorFocusedBrush.TintColor\" \"Object.Style.ItemStyle.SelectorFocusedBrush.Margin\" \"Object.Style.ItemStyle.SelectorFocusedBrush.OutlineSettings.Color\" \"Object.Style.ItemStyle.ActiveHoveredBrush.TintColor\" \"Object.Style.ItemStyle.ActiveHoveredBrush.OutlineSettings.Color\" \"Object.Style.ItemStyle.ActiveHighlightedBrush.TintColor\" \"Object.Style.ItemStyle.ActiveHighlightedBrush.OutlineSettings.Color\" \"Object.Style.ItemStyle.ActiveBrush.TintColor\" \"Object.Style.ItemStyle.ActiveBrush.OutlineSettings.Color\" \"Object.Style.ItemStyle.InactiveHoveredBrush.TintColor\" \"Object.Style.ItemStyle.InactiveHoveredBrush.OutlineSettings.Color\" \"Object.Style.ItemStyle.InactiveHighlightedBrush.TintColor\" \"Object.Style.ItemStyle.InactiveHighlightedBrush.OutlineSettings.Color\" \"Object.Style.ItemStyle.InactiveBrush.TintColor\" \"Object.Style.ItemStyle.InactiveBrush.OutlineSettings.Color\" \"Object.Style.ItemStyle.ParentRowBackgroundBrush.TintColor\" \"Object.Style.ItemStyle.ParentRowBackgroundBrush.OutlineSettings.Color\" \"Object.Style.ItemStyle.ParentRowBackgroundHoveredBrush.TintColor\" \"Object.Style.ItemStyle.ParentRowBackgroundHoveredBrush.OutlineSettings.Color\" \"Object.Style.ItemStyle.EvenRowBackgroundHoveredBrush.TintColor\" \"Object.Style.ItemStyle.EvenRowBackgroundHoveredBrush.OutlineSettings.Color\" \"Object.Style.ItemStyle.EvenRowBackgroundBrush.TintColor\" \"Object.Style.ItemStyle.EvenRowBackgroundBrush.OutlineSettings.Color\" \"Object.Style.ItemStyle.OddRowBackgroundHoveredBrush.OutlineSettings.Color\" \"Object.Style.ItemStyle.OddRowBackgroundBrush.TintColor\" \"Object.Style.ItemStyle.OddRowBackgroundBrush.OutlineSettings.Color\" \"Object.Style.ItemStyle.DropIndicator_Above.TintColor\" \"Object.Style.ItemStyle.DropIndicator_Above.Margin\" \"Object.Style.ItemStyle.DropIndicator_Above.OutlineSettings.Color\" \"Object.Style.ItemStyle.DropIndicator_Onto.TintColor\" \"Object.Style.ItemStyle.DropIndicator_Onto.Margin\" \"Object.Style.ItemStyle.DropIndicator_Onto.OutlineSettings.Color\" \"Object.Style.ItemStyle.DropIndicator_Below.TintColor\" \"Object.Style.ItemStyle.DropIndicator_Below.Margin\" \"Object.Style.ItemStyle.DropIndicator_Below.OutlineSettings.Color\" \"Object.Style.ScrollBarStyle.HorizontalBackgroundImage.TintColor\" \"Object.Style.ScrollBarStyle.HorizontalBackgroundImage.OutlineSettings.Color\" \"Object.Style.ScrollBarStyle.HorizontalBottomSlotImage\" \"Object.Style.ScrollBarStyle.HorizontalBottomSlotImage.TintColor\" \"Object.Style.ScrollBarStyle.HorizontalBottomSlotImage.OutlineSettings.Color\" \"Object.Style.ScrollBarStyle.HorizontalTopSlotImage.TintColor\" \"Object.Style.ScrollBarStyle.HorizontalTopSlotImage.OutlineSettings.Color\" \"Object.Style.ScrollBarStyle.HoveredThumbImage\" \"Object.Style.ScrollBarStyle.HoveredThumbImage.TintColor\" \"Object.Style.ScrollBarStyle.HoveredThumbImage.Margin\" \"Object.Style.ScrollBarStyle.HoveredThumbImage.OutlineSettings.Color\" \"Object.Style.ScrollBarStyle.VerticalBackgroundImage.TintColor\" \"Object.Style.ScrollBarStyle.VerticalBackgroundImage.OutlineSettings.Color\" \"Object.Style.ScrollBarStyle.VerticalBottomSlotImage\" \"Object.Style.ScrollBarStyle.VerticalBottomSlotImage.TintColor\" \"Object.Style.ScrollBarStyle.VerticalBottomSlotImage.OutlineSettings.Color\" \"Object.Style.ScrollBarStyle.VerticalTopSlotImage.TintColor\" \"Object.Style.ScrollBarStyle.VerticalTopSlotImage.OutlineSettings.Color\" \"Object.Style.ScrollBarStyle.NormalThumbImage\" \"Object.Style.ScrollBarStyle.NormalThumbImage.TintColor\" \"Object.Style.ScrollBarStyle.NormalThumbImage.Margin\" \"Object.Style.ScrollBarStyle.NormalThumbImage.OutlineSettings.Color\" \"Object.Style.ScrollBarStyle.DraggedThumbImage.TintColor\" \"Object.Style.ScrollBarStyle.DraggedThumbImage.Margin\" \"Object.Style.ScrollBarStyle.DraggedThumbImage.OutlineSettings.Color\" \"Object.Style.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Content.DefaultOptions\" \"Object.Content.ContentPadding\" "
 K2Node_SwitchString="\"Object\" \"Object.PinOptions.PinNames\" "
 Slider="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-SoundWave="\"Object\" "
-SoundBase="\"Object\" "
-SoundMix="\"Object\" \"Object.SoundClasses.SoundClassEffects\" \"Object.SoundClasses.SoundClassEffects.SoundClassEffects[0]\" \"Object.SoundClasses.SoundClassEffects.SoundClassEffects[1]\" "
+SoundWave="\"Object\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Voice Management.Voice Management|Concurrency.ConcurrencyOverrides\" \"Object.Voice Management.Voice Management|Priority\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" \"Object.Format.Format|Quality\" \"Object.Analysis.Analysis|FFT\" \"Object.Analysis.Analysis|FFT.FrequenciesToAnalyze\" \"Object.Analysis.Analysis|Envelope\" \"Object.Info.TimecodeInfo\" "
+SoundBase="\"Object\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Voice Management.Voice Management|Concurrency.ConcurrencyOverrides\" \"Object.Voice Management.Voice Management|Priority\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" \"Object.Format.Format|Quality\" \"Object.Analysis.Analysis|FFT\" \"Object.Analysis.Analysis|FFT.FrequenciesToAnalyze\" \"Object.Analysis.Analysis|Envelope\" \"Object.Info.TimecodeInfo\" "
+SoundMix="\"Object\" \"Object.SoundClasses.SoundClassEffects\" \"Object.SoundClasses.SoundClassEffects.SoundClassEffects[0]\" \"Object.SoundClasses.SoundClassEffects.SoundClassEffects[1]\" \"Object.SoundClasses.SoundClassEffects.SoundClassEffects[2]\" "
 SoundClass="\"Object\" "
 Settingsave_C="\"Object\" "
 SaveGame="\"Object\" "
@@ -3484,6 +3494,7 @@ EdGraphNode_Comment="\"Object\" "
 /Game/Audio/MasterSoundclassMIx.MasterSoundclassMIx=1
 /Game/Saves/Settingsave.Settingsave=1
 /Game/Audio/Music/relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME.relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME=1
+/Game/Audio/Music/MasterMusic_Soundclass.MasterMusic_Soundclass=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3508,8 +3519,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
