options menu animation

--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -418,16 +418,16 @@ MRUItem1=/Game/MainmenuMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SoundClassEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=SoundClassEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
@@ -448,13 +448,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/UI/Button_menu.Button_menu
-OpenAssetsAtExit=/Game/UI/OptionsMenuWB.OptionsMenuWB
-OpenAssetsAtExit=/Game/Audio/MasterSoundclassMIx.MasterSoundclassMIx
-OpenAssetsAtExit=/Game/Audio/SFX/click-345983.click-345983
-OpenAssetsAtExit=/Game/Maps/MainmenuMap.MainmenuMap:PersistentLevel.MainmenuMap
-OpenAssetsAtExit=/Game/Audio/Master.Master
-OpenAssetsAtExit=/Game/Saves/Settingsave.Settingsave
 
 [RootWindow]
 ScreenPosition=X=272.000 Y=240.000
@@ -1902,7 +1895,7 @@ ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/PlayerTestMap
 ContentBrowserDrawer.JumpMRU========
-ContentBrowserTab1.SelectedPaths=/Game/Saves
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -3116,18 +3109,18 @@ SoundWave.Curves=True
 SoundWave.Advanced=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Saves/Settingsave
-MRUItem1=/Game/Audio/Master
-MRUItem2=/Game/Audio/MasterSoundclassMIx
-MRUItem3=/Game/Audio/SFX/click-345983
-MRUItem4=/Game/UI/Button_menu
-MRUItem5=/Game/Audio/Music/MasterMusic_Soundclass
-MRUItem6=/Game/Audio/Music/relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME
-MRUItem7=/Game/UI/OptionsMenuWB
-MRUItem8=/Game/Maps/MainmenuMap
-MRUItem9=/Game/UI/ExitOptions
-MRUItem10=/Game/Maps/Enemy1
-MRUItem11=/Game/UI/MainMenu
+MRUItem0=/Game/UI/MainMenu
+MRUItem1=/Game/Saves/Settingsave
+MRUItem2=/Game/Audio/Master
+MRUItem3=/Game/Audio/MasterSoundclassMIx
+MRUItem4=/Game/Audio/SFX/click-345983
+MRUItem5=/Game/UI/Button_menu
+MRUItem6=/Game/Audio/Music/MasterMusic_Soundclass
+MRUItem7=/Game/Audio/Music/relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME
+MRUItem8=/Game/UI/OptionsMenuWB
+MRUItem9=/Game/Maps/MainmenuMap
+MRUItem10=/Game/UI/ExitOptions
+MRUItem11=/Game/Maps/Enemy1
 MRUItem12=/Game/UI/LevelSelectMenuWidget
 MRUItem13=/Game/UI/UI_assets/Button_arrow
 MRUItem14=/Game/UI/UI_assets/RotF_logo_1_
@@ -3260,10 +3253,10 @@ bNavigationToolVisible=False
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Object="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Object="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" \"Object.SoundClasses.SoundClassEffects\" \"Object.SoundClasses.SoundClassEffects.SoundClassEffects[0]\" \"Object.SoundClasses.SoundClassEffects.SoundClassEffects[1]\" \"Object.SoundClasses.SoundClassEffects.SoundClassEffects[2]\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 MassSettings="\"Object\" \"Object.Mass\" "
@@ -3278,12 +3271,12 @@ MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
-MainMenu_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object\" "
+MainMenu_C="\"Object\" "
+UserWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-OptionsMenuWB_C="\"Object\" "
+OptionsMenuWB_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" \"Object.PinOptions.PinNames\" "
 K2Node="\"Object\" \"Object.PinOptions.PinNames\" "
@@ -3495,6 +3488,7 @@ EdGraphNode_Comment="\"Object\" "
 /Game/Saves/Settingsave.Settingsave=1
 /Game/Audio/Music/relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME.relaxing-guitar-loop-v11-PLACEHOLDER_MENUTHEME=1
 /Game/Audio/Music/MasterMusic_Soundclass.MasterMusic_Soundclass=1
+/Game/Audio/Master.Master=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
